fix overflow to clip on main class

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  overflow: hidden;
+  overflow: clip;
 }
 
 .privacyScreen {
